# echo

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  CI_CD_BACKEND_FIXES.md  CI_CD_COMPLIANCE_REPORT.md  CI_CD_ENHANCEMENTS.md  CI_CD_VALIDATION_REPORT.md  COVERAGE_IMPROVEMENTS.md  DEPLOYMENT_READY.md  DOCKER_STATUS.md  ECHO_BRAND_SYSTEM.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  QUICK_START.md  README.md  README_CI_CD_ADDITION.md  SETTINGS_IMPLEMENTATION.md  TEST_COVERAGE_FINAL_REPORT.md  TEST_IMPROVEMENTS_SUMMARY.md  TYPESCRIPT_FIXES_GUIDE.md  UI_TRANSFORMATION_COMPLETE.md  WORK_COMPLETED_SUMMARY.md  backend_test_results.txt  coverage.xml  create_history.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-health.sh  final_coverage_report.txt  final_test_results.txt  index.js  init-postgres.sql  package-lock.json  package.json  performance-monitor.py  start-docker.sh  (+4 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.production  Dockerfile.test  alembic.ini  coverage_output.txt  docker-compose.production.yml  docker-compose.yml  healthcheck.sh  main.py  minimal_auth_server.py  pyproject.toml  pytest.ini  requirements-auth.txt  requirements.txt  run_production.py  simple_auth_server.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: admin.py  analytics.py  auth.py  chat.py  enhanced_crud.py  enhanced_products.py  files.py  health.py  posts.py  (+5 more)
backend/app/auth/: __init__.py  dependencies.py  email_service.py  jwks_routes.py  jwt_utils.py  models.py  oauth.py  password_reset.py  redis_service.py  routes.py  security.py  totp_routes.py
backend/app/config/: database.py  settings.py
backend/app/core/: cache.py  config.py  csrf.py  database.py  exceptions.py  logging.py  middleware.py  performance.py  rate_limit.py  rate_limiter.py  redis.py  repository.py  security.py  service.py  simple_config.py
backend/app/domain/entities/: post.py  shop.py  tuition.py  user.py
backend/app/domain/repositories/: post_repository.py  shop_repository.py  tuition_repository.py  user_repository.py
backend/app/infrastructure/database/: models.py
backend/app/models/: audit.py  chat.py  course.py  enrollment.py  payment.py  review.py  shop.py  teacher.py  tuition.py  user.py
backend/app/services/: email_service.py  enhanced_shop_service.py  file_service.py  payment_service.py  redis_service.py  shop_service.py  tuition_service.py
backend/app/utils/: database_compat.py
backend/app/utils/algorithms/: rate_limiter.py  search.py
backend/app/utils/data_structures/: lru_cache.py  trie.py
backend/k8s/: deployment.yaml
backend/migrations/: env.py
backend/migrations/versions/: 2025_01_01_0000-fix_vector_compatibility.py
backend/nginx/: nginx.conf
backend/scripts/: init-db.sql
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py  test_auth_endpoints.py  test_shop_endpoints.py  test_tuition_endpoints.py  test_users_endpoints.py
backend/tests/unit/: test_auth_dependencies.py  test_auth_redis_service.py  test_auth_routes.py  test_auth_security.py  test_cache.py  test_config.py  test_config_database.py  test_config_settings.py  test_database.py  test_database_compat.py  test_email_service.py  test_endpoints_admin.py  test_endpoints_analytics.py  test_endpoints_auth.py  test_endpoints_chat.py  test_endpoints_files.py  test_endpoints_search.py  test_exceptions.py  test_file_service.py  test_health_endpoints.py  test_jwks_routes.py  test_jwt_utils.py  test_logging.py  test_main.py  test_middleware.py  test_oauth_routes.py  test_password_reset.py  test_payment_service.py  test_posts_endpoints.py  test_redis.py  test_security.py  test_shop_service.py  test_totp_routes.py  test_tuition_service.py
(+628 files in other folders)
